--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
             rel="stylesheet"
         />
         <title>Account</title>
-        <link rel="stylesheet" href="/style.css" />
+        <link rel="stylesheet" href="style.css" />
     </head>
     <body>
         <div>
